# LARMOR

./: .gitignore  INSTALL.md  LARMOR.bat  LICENSE  README.md  ROADMAP.md  environment.yml  install.bat  install.ps1  make_logo.py  pyproject.toml  requirements.txt  update.bat  update.ps1
data/: README.md
docs/tutorials/: 01-first-fit-27Al-czjzek.md  02-constraints.md  03-figures.md
examples/: CaAlGlass.recipe.json
larmor/: __init__.py  app.py  autofit.py  cellparse.py  cli.py  convert.py  correlate.py  dft.py  engine.py  figures.py  fit.py  fourier.py  loader.py  measure.py  multifit.py  nuclei.py  processing.py  qcpmg.py  quantify.py  recipe.py  redor.py  satrec.py  series.py  simpson.py  twod.py  vt.py
larmor/desktop/: __init__.py  app.py  cofit_dialog.py  datasets.py  dialogs.py  explorer.py  fid_dialog.py  figure_dialog.py  help_dialog.py  mdrender.py  (+14 more)
notebooks/: phase0_feasibility.ipynb
packaging/: README.md  larmor.spec  launcher.py
tests/: conftest.py  test_autofit.py  test_birdfact_egg.py  test_bruker.py  test_cellparse.py  test_cellparse_units.py  test_constraints.py  test_convert_nuclei.py  test_correlate.py  test_desktop.py  test_dft_simpson.py  test_engine_fit.py  test_figures.py  test_fxmla.py  test_guided_t1_bounds.py  test_lineshapes_help.py  test_loader_presets.py  test_manuals.py  test_models_processing.py  test_models_v2.py  test_more_card.py  test_processing_ops.py  test_processing_v2.py  test_qcpmg.py  test_reader_fourier.py  test_satrec_multifit.py  test_scan_export.py  test_series_redor.py  test_spectra_io.py  test_twod.py  test_vt.py
(+36 files in other folders)
